@@ -1,3 +1,9 @@
+2002-07-21  Wakaba <w@suika.fam.cx>
+
+	* Structured.pm (_parse_value): Inherit header_default_charset,
+	header_default_charset_input, body_default_charset,
+	body_default_charset_input.
+
 2002-07-13  Wakaba <w@suika.fam.cx>
 
 	* MDNDisposition.pm, ReportingUA.pm: New modules.
